--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<meta http-equiv="refresh" content="0; url=https://photos.app.goo.gl/rGMH3Sw8jyQCyMkw9" />
+		<meta http-equiv="refresh" content="0; url=https://photos.app.goo.gl/zrJnma6s1a1xPCu89" />
 		<title>FOSSASIA Speaker Registration</title>
 		<meta name="description" content="FOSSASIA" />
 		<meta name="keywords" content="FOSSASIA" />
